--- a/05-zustand-react-task-planner-app/package.json
+++ b/05-zustand-react-task-planner-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "02-avatar-image-generator",
+  "name": "05-zustand-react-task-planner-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "antd": "^5.27.3",
+    "lucide-react": "^0.542.0",
+    "moment": "^2.30.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-toastify": "^11.0.5",
-    "remixicon": "^4.6.0",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
